tests/custom-sysy2022/positive/c035_scope_shadow_7.sy
const int A = 10;
int main() {
  int x = A;
  {
    const int A = 10 + 1;
    x = x + A;
    {
      int A = 10 + 2;
      x = x + A;
    }
    x = x + A;
  }
  putint(x);
  putch(10);
  return 0;
}
