tests/custom-sysy2022/negative/c099_neg_lex_03.sy
int main() {
  float x = 1.2.3;
  return 0;
}
